<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".event">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logogsca" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="10dp">

            <TextView
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom_event"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/desc_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/desc_event"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_name" />

            <TextView
                android:id="@+id/lieu_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/lieu_event"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_event" />

            <TextView
                android:id="@+id/add_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/add_event"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lieu_event" />

            <TextView
                android:id="@+id/debut_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/debut_event"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_event" />

            <TextView
                android:id="@+id/prix_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/prix_event"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nb_places" />

            <TextView
                android:id="@+id/fin_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/fin_event"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/debut_event" />

            <TextView
                android:id="@+id/nb_places"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/nb_places"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fin_event" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:elevation="0dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="389dp">

                <Button
                    android:id="@+id/oui"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:text="Je viendrai"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/non"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:backgroundTint="@android:color/holo_red_dark"
                    android:text="Je ne viendrai pas "
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <Button
                android:id="@+id/avec_invite"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:text="Je viendrai accompagné(e)"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>